--- a/hemsida/src/Components/Sections/Weather.css
+++ b/hemsida/src/Components/Sections/Weather.css
@@ -2,10 +2,12 @@
     line-height: 1.5rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
+    
 }
 
 .weatherForecast{
     margin-top: 2rem;
+    
 }
 
 .weatherwrapper {
@@ -26,3 +28,7 @@ img {
     display: block;
   }
 
+.location-box {
+    color: rgb(0, 0, 0);
+    font-size: large;
+}
